https://github.com/tezoatlipoca/GeFeSLE-server/issues/13 - file uploading.

--- a/gefesle.popup.html
+++ b/gefesle.popup.html
@@ -10,7 +10,7 @@
 
 </head>
 <body>
-  <p><b>GeFeSLE</b> - <a href="gefesle.config.html">Config</a> - <a href="_login.html">Login</a></p>
+  <p><b>GeFeSLE</b> - <a href="gefesle.config.html">Config</a> - <a href="_login.html">Login</a> - <a href="fileupload.html">UPLOAD</a></p>
   <p>LIST: <span id="listname"></span></p>
   <form id="addnew-form" class="gefesle.form">
     <input type="text" id="list.url" name="list.url"><br>
