Screenshot upload works; async that with addThing - ugh I hate async calls.

--- a/_login.html
+++ b/_login.html
@@ -10,7 +10,7 @@
             
         </head>
         <body>
-        <p><a href="gefesle.popup.html">GeFeSLE</a>  - <a href="gefesle.config.html">Config</a>  - <b>Login</b></p>
+        <p><a href="gefesle.popup.html">GeFeSLE</a>  - <a href="gefesle.config.html">Config</a>  - <b>Login</b> - <a href="receipt.html">RECEIPT</a></p>
             <form id="loginform" method='post' >
                 <label for='username'>Username:</label><br>
                 <input type='text' id='username' name='username'><br>
