--- a/receipt.html
+++ b/receipt.html
@@ -9,12 +9,9 @@
 
 </head>
 <body>
-  <p><a href="gefesle.popup.html">GeFeSLE</a> - <a href="gefesle.config.html">Config</a> - <a href="_login.html">Login</a> - UPLOAD</p>
+  <p><a href="gefesle.popup.html">GeFeSLE</a> - <a href="gefesle.config.html">Config</a> - <a href="_login.html">Login</a> - RECEIPT</p>
   <p>LIST: <span id="listname"></span></p>
-  <form id="uploadform" class="uploadform">
-    <input type="text" id="uploadfiles" name="uploadfiles"><br>
-    <input type="submit" value="SEND">
-  </form>
+  
   <span id="result" class="result"></span><br>
   <span id="heartbeat" class="heartbeat"></span>
 
