--- a/gefesle.popup.html
+++ b/gefesle.popup.html
@@ -10,13 +10,17 @@
 
 </head>
 <body>
-  <p><b>GeFeSLE</b> - <a href="gefesle.config.html">Config</a> - <a href="_login.html">Login</a> - <a href="fileupload.html">UPLOAD</a></p>
+  <p><b>GeFeSLE</b> - <a href="gefesle.config.html">Config</a> - <a href="_login.html">Login</a> - <a href="receipt.html">RECEIPT</a></p>
   <p>LIST: <span id="listname"></span></p>
   <form id="addnew-form" class="gefesle.form">
     <input type="text" id="list.url" name="list.url"><br>
     <input type="textarea" id="list.comment" name="list.comment"><br>
     Tags: <input type="text" id="list.tags" name="list.tags"><br>
     <input type="submit" value="SEND">
+    
+  </form>
+  <form id="receiptform" class="receiptform">
+    <input type="submit" value="RECEIPT IT">
   </form>
   <span id="result" class="result"></span><br>
   <span id="heartbeat" class="heartbeat"></span>
