handle better msgs from antiforgery. removed receipt tab solved filename handling (hack tho; see note about promise) brought back simplemde editor auto insert selected content from open tab

--- a/gefesle.config.html
+++ b/gefesle.config.html
@@ -6,7 +6,7 @@
   <script src="gefesle.plugin.js"></script>
 </head>
 <body>
-  <p><a href="gefesle.popup.html">GeFeSLE</a> - <b>Config</b> - <a href="_login.html">Login</a> - <a href="receipt.html">RECEIPT</a></p>
+  <p><a href="gefesle.popup.html">GeFeSLE</a> - <b>Config</b> - <a href="_login.html">Login</a></p>
   
   <form id="settings-form">
     <label for="url">Where is GeFeSLE? (url):</label><br>
