Various; also included showdown and simplemde->easymde dependancies.

--- a/gefesle.popup.html
+++ b/gefesle.popup.html
@@ -3,12 +3,12 @@
 <html>
 <head>
   <link rel="stylesheet" type="text/css" href="gefesle.ff.plugin.css">
-  <link rel="stylesheet" href="/simplemde.min.css">
+  <link rel="stylesheet" href="/lib/easymde/easymde.min.css">
   <script src="gefesle.plugin.js"></script>
-  <!-- simpelMDE - markdown WYSIWYG editor -->
-  <script src="/simplemde.min.js"></script>
+  <!-- EasyMDE - markdown WYSIWYG editor -->
+  <script src="/lib/easymde/easymde.min.js"></script>
   <!-- showdown is html > markdown converter. used for quoting into the simpleMDE box-->
-  <script src="showdown.js"></script>
+  <script src="/lib/showdown/showdown.js"></script>
 
 </head>
 <body>
